# aether-cpp

./: .gitignore  CMakeLists.txt
src/: Aether.cpp  Aether.h  CMakeList.txt  CMakeLists.txt  Film.h  Geometry.cpp  Geometry.h  InMemoryFilm.h  Matrix3D.cpp  Matrix3D.h  Plane.cpp  Plane.h  PlaneTests.cpp  Scene.cpp  Scene.h  ShadeRec.h  aether  main.cpp
src/Aether/: Aether-Info.plist  Aether-Prefix.pch  AppController.m  AppController.mm  AppDelegate.h  AppDelegate.m  main.m
src/Aether.xcodeproj/: project.pbxproj
src/Aether.xcodeproj/xcshareddata/xcschemes/: Aether.xcscheme  Test.xcscheme
src/Aether/en.lproj/: MainMenu.xib
src/Aether2.xcodeproj/xcshareddata/xcschemes/: Aether.xcscheme
src/Cameras/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PinholeCamera.h  ProjectionCamera.cpp
src/Math/: Color.cpp  Matrix.h  Matrix.inl  Matrix3D.cpp  Matrix3D.h  Normal3D.cpp  Normal3D.h  Point3D.cpp  Point3D.h  Point4D.cpp  Point4D.h  Ray3D.h  Vector3D.cpp  Viewport3D.cpp  Viewport3D.h
src/Sampling/: RegularSampler.h  Sample.h  Sampler.h
src/Shapes/: Shape.h  Sphere.h
src/aether.xcodeproj/: project.pbxproj
src/engine/: Aether.cpp  Aether.h  Camera.cpp  Camera.h  Color.h  Film.cpp  Film.h  InMemoryFilm.cpp  InMemoryFilm.h  Math.h  Normal3D.h  OrthographicCamera.cpp  OrthographicCamera.h  PinholeCamera.cpp  Plane.cpp  Plane.h  Point3D.cpp  ProjectionCamera.cpp  ProjectionCamera.h  RegularSampler.cpp  Sample.cpp  Sample.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shape.h  Sphere.cpp  Sphere.h  Tracer.cpp  Tracer.h  Vector3D.cpp  Vector3D.h  geometry.h  shaderec.h
src/engine/math/: geometry.cpp  geometry.h  math.h  normal3d.cpp  point3d.cpp  point3d.h  vector3d.cpp
src/engine/shapes/: plane.h  shape.h  sphere.cpp  sphere.h
src/gui/osx/: AppController.h  AppController.mm
src/tests/: CMakeList.txt  RegularSamplerTests.cpp  SphereTests.cpp  Vector3DTests.cpp  main.cpp  tests.h
src/tests/math/: geometrytests.cpp  vector3dtests.cpp
src/tests/shapes/: spheretests.cpp
tests/: CMakeLists.txt  Geometry_UnitTest.cpp  Matrix3DTests.cpp  PlaneTests.cpp  RegularSamplerTests.cpp  SphereTests.cpp  TestHelper.h  Vector3DTests.cpp  aether_tests  main.cpp
tools/gtest.framework/Versions/A/: gtest
tools/gtest.framework/Versions/A/Resources/: Info.plist
